Alignment Fixes

--- a/src/app/cryptotracker/cryptotracker-detail/cryptotracker-detail-overview/cryptotracker-detail-overview.component.scss
+++ b/src/app/cryptotracker/cryptotracker-detail/cryptotracker-detail-overview/cryptotracker-detail-overview.component.scss
@@ -26,7 +26,7 @@ ion-button.active-history {
 }
 
 .item-subtitle {
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 700;
 }
 
